--- a/src/views/homepage.hbs
+++ b/src/views/homepage.hbs
@@ -12,17 +12,10 @@
     <script src="https://kit.fontawesome.com/ca0d395c8b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
-    <link href="/css/project.css?v=1" rel="stylesheet" />
-    <link href="/css/navbar-responsive.css" rel="stylesheet" />
+    <link href="/css/project.css" rel="stylesheet" />
     <link href="/css/color.css" rel="stylesheet" />
     <link href="/css/hover_and_click.css" rel="stylesheet" />
     <link href="/css/font_size.css" rel="stylesheet" />
-
-    <style>
-        .fw-medium {
-            font-weight: 600;
-        }
-    </style>
 </head>
 
 <body>
@@ -276,7 +269,7 @@
                             <!-- add project -->
                             <div class="col-2 d-flex justify-content-center align-items-center">
                                 <div class="add-project hover-to-bg-light-violet clickable hover-shadow-box"
-                                    data-bs-toggle="modal" data-bs-target="#modal-create-project">
+                                    data-bs-toggle="modal" data-bs-target="#modal-upload-file">
                                     <i class="bi bi-plus-circle mb-1 fs-3"></i>
                                     <div class="fs-6 fw-medium">
                                         Add File
@@ -294,7 +287,7 @@
                             <!-- add-project -->
                             <div class="col-lg-4 col-8">
                                 <div class="add-new-project p-2 hover-to-bg-darken-green clickable"
-                                    data-bs-toggle="modal" data-bs-target="#modal-create-project">
+                                    data-bs-toggle="modal" data-bs-target="#modal-upload-file">
                                     <i class="bi bi-plus-lg color-deep-violet fs-3"></i>
                                     <span class="color-deep-violet fw-medium fs-5 ps-2">Add New File</span>
                                 </div>
@@ -446,7 +439,7 @@
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
                                                 <i class="bi bi-share color-blue fs-5 pe-1"></i>
-                                                <i class="bi bi-trash3 color-red fs-5"></i>                                              
+                                                <i class="bi bi-trash3 color-red fs-5"></i>
                                             </div>
                                         </div>
 
@@ -507,7 +500,7 @@
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
                                                 <i class="bi bi-share color-blue fs-5 pe-1"></i>
-                                                <i class="bi bi-trash3 color-red fs-5"></i>                                              
+                                                <i class="bi bi-trash3 color-red fs-5"></i>
                                             </div>
                                         </div>
 
@@ -568,7 +561,7 @@
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
                                                 <i class="bi bi-share color-blue fs-5 pe-1"></i>
-                                                <i class="bi bi-trash3 color-red fs-5"></i>                                              
+                                                <i class="bi bi-trash3 color-red fs-5"></i>
                                             </div>
                                         </div>
 
@@ -629,7 +622,7 @@
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
                                                 <i class="bi bi-share color-blue fs-5 pe-1"></i>
-                                                <i class="bi bi-trash3 color-red fs-5"></i>                                              
+                                                <i class="bi bi-trash3 color-red fs-5"></i>
                                             </div>
                                         </div>
 
@@ -690,7 +683,7 @@
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
                                                 <i class="bi bi-share color-blue fs-5 pe-1"></i>
-                                                <i class="bi bi-trash3 color-red fs-5"></i>                                              
+                                                <i class="bi bi-trash3 color-red fs-5"></i>
                                             </div>
                                         </div>
 
@@ -751,7 +744,7 @@
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
                                                 <i class="bi bi-share color-blue fs-5 pe-1"></i>
-                                                <i class="bi bi-trash3 color-red fs-5"></i>                                              
+                                                <i class="bi bi-trash3 color-red fs-5"></i>
                                             </div>
                                         </div>
 
@@ -812,7 +805,7 @@
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
                                                 <i class="bi bi-share color-blue fs-5 pe-1"></i>
-                                                <i class="bi bi-trash3 color-red fs-5"></i>                                              
+                                                <i class="bi bi-trash3 color-red fs-5"></i>
                                             </div>
                                         </div>
 
@@ -845,7 +838,7 @@
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div id="right-below-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
-                <img src="/img/app-icon.png" class="rounded me-2" alt="..." style="height: 1.2rem;" />
+                <img src="/img/logo.png" class="rounded me-2" alt="..." style="height: 1.2rem;" />
                 <strong class="me-auto">Server Notification</strong>
                 <small>Just now</small>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -854,39 +847,32 @@
         </div>
     </div>
 
-    <div class="modal fade" id="modal-create-project" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
+    <div class="modal fade" id="modal-upload-file" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
             <div class="modal-content align-items-center fw-bold color-deep-violet primary-background"
                 style="padding: 0 6%;">
                 <div class="modal-header" style="border-bottom: none;">
                     <p class="modal-title fs-3" id="modalTitleId">
-                        Add New Project
+                        Upload New File
                     </p>
                 </div>
-                <div class="modal-body" style="border-bottom: none; width: 100%;">
-                    <div class="row mb-3">
-                        <div class="col">
-                            <label for="project-name">
-                                Project Name <span style="color: #F0270C;">*</span> :
-                            </label>
-                            <input type="text" name="project-name" class="form-control mt-2" id="projectNameInput"
-                                placeholder="Your Project Name">
-                            <div id="projectNameError-1" class="text-danger fs-6 fw-normal" style="display: none;">
-                                Please
-                                enter project name</div>
-                            <div id="projectNameError-2" class="text-danger fs-6 fw-normal" style="display: none;">This
-                                project name is existing</div>
+                <div class="modal-body"
+                    style="border-bottom: none; width: 100%; display: flex; justify-content: center; align-items: center;">
+
+                    <div class="upload-container">
+                        <div class="drag-area">
+                            <div class="icon">
+                                <i class="fas fa-file-upload"></i>
+                            </div>
+                            <span class="header">Drag & Drop</span>
+                            <span class="header">or <span class="button">browse</span></span>
+                            <input type="file" hidden multiple />
+                            <span class="support">Supports: JPEG, JPG, PNG, PDF, XLSX, TXT, DOCX</span>
                         </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="create-with-sample-data">
-                                <label class="form-check-label fs-6 fw-medium color-black"
-                                    for="create-with-sample-data">
-                                    Create project with sample data
-                                </label>
+                        <div class="row justify-content-center align-items-center">
+                            <div class="col text-center">
+                                <button class="remove" style="display: none;">Remove</button>
                             </div>
                         </div>
                     </div>
@@ -895,104 +881,18 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Close
                     </button>
-                    <button type="button" class="btn btn-primary" id="create-project-button">Create</button>
+                    <button type="button" class="btn btn-primary" id="upload-new-file-button">Upload</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="modal fade" id="modal-add-user" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content align-items-center fw-bold color-deep-violet primary-background"
-                style="padding: 0 6%;">
-                <div class="modal-header" style="border-bottom: none;">
-                    <p class="modal-title fs-3" id="modalTitleId">
-                        Add New User To Project
-                    </p>
-                </div>
-                <div class="modal-body" style="border-bottom: none; width: 100%;">
-                    <div class="row mb-3">
-                        <div class="col">
-                            <label for="user-email-input">
-                                User Email <span style="color: #F0270C;">*</span> :
-                            </label>
-                            <input type="text" name="user-email-input" id="userEmailInput" class="form-control mt-2"
-                                placeholder="user@gmail.com">
-
-                            <div id="userEmailError-1" class="text-danger fs-6 fw-normal" style="display: none;">Please
-                                enter user email</div>
-                            <div id="userEmailError-2" class="text-danger fs-6 fw-normal" style="display: none;">This
-                                user
-                                email is already exist in system</div>
-                            <div id="userEmailError-3" class="text-danger fs-6 fw-normal" style="display: none;">This
-                                user
-                                email is incorrect</div>
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col">
-                            <label for="user-role">
-                                User Role <span style="color: #F0270C;">*</span> :
-                            </label>
-                            <select name="user-role" class="form-select mt-2" aria-label="Default select example"
-                                id="userRoleInput" required>
-                                <option value="" selected>Select Role</option>
-                                <option value="Manager">Manager</option>
-                                <option value="Tester">Tester</option>
-                                <option value="Developer">Developer</option>
-                            </select>
-                            <div id="userRoleError" class="text-danger fs-6 fw-normal" style="display: none;">Please
-                                select
-                                user role</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer" style="border-top: none;">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Close
-                    </button>
-                    <button type="button" class="btn btn-primary" id="save-add-user-button">Save</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="modal-delete-project" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content align-items-center fw-bold color-deep-violet primary-background"
-                style="padding: 0 6%;">
-                <div class="modal-header" style="border-bottom: none;">
-                    <p class="modal-title fs-3" id="modalTitleId">
-                        Delete Project
-                    </p>
-                </div>
-                <div class="modal-body" style="border-bottom: none; width: 100%;">
-                    <div class="row mb-3">
-                        <div class="col">
-                            <p class="color-black mt-0 fw-medium">Are you sure you want to delete this project?</p>
-                            <p class="color-black mt-0 fw-medium">When a project is deleted, all collaborators will no
-                                longer see it.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer" style="border-top: none;">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Cancel
-                    </button>
-                    <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="/js/homepage.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/showToast.js"></script>
+    <script src="/js/modal.js"></script>
     <script>
         function reActivateTooltip() {
             const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
