--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -86,17 +86,25 @@
                 const fp = await FingerprintJS.load();
                 const result = await fp.get();
 
-                //console.log(result.requestId, result.visitorId);
-
                 const deviceId = result.visitorId; // Mã định danh thiết bị duy nhất
+
+                const response = await fetch('https://api.ipify.org/?format=json');
+                const data = await response.json();
+                const ipAddress = data.ip; // Địa chỉ IP
 
                 const form = document.getElementById('loginForm');
                 if (form) {
-                    const input = document.createElement('input');
-                    input.type = 'hidden';
-                    input.name = 'deviceId';
-                    input.value = deviceId;
-                    form.appendChild(input);
+                    const deviceIdInput = document.createElement('input');
+                    deviceIdInput.type = 'hidden';
+                    deviceIdInput.name = 'deviceId';
+                    deviceIdInput.value = deviceId;
+                    form.appendChild(deviceIdInput);
+
+                    const ipAddressInput = document.createElement('input');
+                    ipAddressInput.type = 'hidden';
+                    ipAddressInput.name = 'ipAddress';
+                    ipAddressInput.value = ipAddress;
+                    form.appendChild(ipAddressInput);
                 }
             } catch (error) {
                 console.error('Error loading FingerprintJS:', error);
