--- a/src/views/homepage.hbs
+++ b/src/views/homepage.hbs
@@ -442,8 +442,13 @@
 
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
-                                                <i class="bi bi-share color-blue fs-5 pe-1"></i>
-                                                <i class="bi bi-trash3 color-red fs-5"></i>
+                                                <i class="bi bi-share color-blue fs-5 pe-2"
+                                                    style="cursor: pointer;"></i>
+
+                                                <i class="bi bi-trash3 color-red fs-5" 
+                                                    data-file-name="{{name}}" 
+                                                    data-bs-toggle="modal" data-bs-target="#modal-delete-file"
+                                                    style="cursor: pointer;"></i>
                                             </div>
                                         </div>
 
@@ -530,12 +535,41 @@
         </div>
     </div>
 
+    <div class="modal fade" id="modal-delete-file" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content align-items-center fw-bold color-deep-violet primary-background"
+                style="padding: 0 6%;">
+                <div class="modal-header" style="border-bottom: none;">
+                    <p class="modal-title fs-3" id="modalTitleId">
+                        Delete File
+                    </p>
+                </div>
+                <div class="modal-body" style="border-bottom: none; width: 100%;">
+                    <div class="row mb-3">
+                        <div class="col">
+                            <p class="color-black mt-0 fw-medium">Are you sure you want to delete this file?</p>
+                            <p class="color-black mt-0 fw-medium">When a file is deleted, you will no longer see it.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer" style="border-top: none;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Cancel
+                    </button>
+                    <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/showToast.js"></script>
     <script src="/js/modal.js"></script>
+    <script src="/js/deleteFile.js"></script>
     <script>
         function reActivateTooltip() {
             const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
