add Location check && configAuthentication.json && set unique field in Device and IPAddress

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -56,6 +56,11 @@
                         <i class="bi bi-exclamation-circle"></i>
                         <span>Email or password incorrect</span>
                     </div>
+
+                    <input type="hidden" id="deviceId" name="deviceId">
+                    <input type="hidden" id="ipAddress" name="ipAddress">
+                    <input type="hidden" id="latitude" name="latitude">
+                    <input type="hidden" id="longitude" name="longitude">
                 </div>
                 <button type="submit" class="btn btn-primary w-100 mt-3">Login now</button>
             </form>
@@ -82,74 +87,61 @@
     <script>
         document.addEventListener('DOMContentLoaded', async (event) => {
             try {
+                // Lấy mã định danh thiết bị
                 const FingerprintJS = await import('https://fpjscdn.net/v3/OlgF0wkZCueWxjQcQUCs');
                 const fp = await FingerprintJS.load();
                 const result = await fp.get();
 
-                //console.log(result.requestId, result.visitorId);
-
                 const deviceId = result.visitorId; // Mã định danh thiết bị duy nhất
+
+
+                // Lấy địa chỉ IP công khai
+                const response = await fetch('/get-public-ip');
+                const data = await response.json();
+                const ipAddress = data.ip;
+
+                // Lấy vị trí kinh độ, vĩ độ
+                const latitude = data.lat;
+                const longitude = data.lon;
+
+
 
                 const form = document.getElementById('loginForm');
                 if (form) {
-                    const input = document.createElement('input');
-                    input.type = 'hidden';
-                    input.name = 'deviceId';
-                    input.value = deviceId;
-                    form.appendChild(input);
+                    const deviceInput = form.querySelector('input[name="deviceId"]');
+                    const ipInput = form.querySelector('input[name="ipAddress"]');
+                    const latitudeInput = form.querySelector('input[name="latitude"]');
+                    const longitudeInput = form.querySelector('input[name="longitude"]');
+
+
+                    if (deviceInput) {
+                        deviceInput.value = deviceId;
+                    } else {
+                        console.error('Device input not found');
+                    }
+
+                    if (ipInput) {
+                        ipInput.value = ipAddress;
+                    } else {
+                        console.error('IP input not found');
+                    }
+
+                    if (latitudeInput) {
+                        latitudeInput.value = latitude;
+                    } else {
+                        console.error('latitude input not found');
+                    }
+
+                    if (longitude) {
+                        longitudeInput.value = longitude;
+                    } else {
+                        console.error('longitude input not found');
+                    }
                 }
             } catch (error) {
-                console.error('Error loading FingerprintJS:', error);
+                console.error('Error:', error);
             }
         });
     </script>
-    
-
-
-    {{!-- <script>
-        document.getElementById('loginForm').addEventListener('submit', async function(event) {
-            event.preventDefault(); // Prevent default form submission
-
-            // Loading layer on submit button
-            const submitButton = document.querySelector('button[type="submit"]');
-            submitButton.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...';
-            submitButton.disabled = true;
-
-            // Get form data
-            const formData = {
-                email: document.getElementById('input-email').value,
-                password: document.getElementById('input-password').value
-            };
-
-            try {
-                // Send POST request to server
-                const response = await fetch('http://localhost:3000/auth/login', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(formData),
-                });
-
-                if (!response.ok) {
-                    console.log("ERROR");
-                    throw new Error('Network response was not ok');
-                }
-
-                const data = await response.json();
-
-                // Assuming data contains refreshToken
-                // Set refreshToken in cookie
-                document.cookie = `refreshToken=${data.refreshToken}; Secure; SameSite=None; Path=/`;
-
-                // Redirect user after successful login
-                window.location.href = '/dashboard';
-            } catch (error) {
-                console.error('Error:', error);
-                // Handle errors (show error message to user, etc.)
-            }
-        });
-
-    </script> --}}
 </body>
 </html>
