--- a/src/views/homepage.hbs
+++ b/src/views/homepage.hbs
@@ -413,7 +413,7 @@
 
                                     <div class="row align-items-center">
                                         <div class="col col-sm-4">
-                                            <div class="fw-medium fs-5 color-deep-violet">
+                                            <div class="fw-medium fs-5 color-deep-violet text-wrap">
                                                 {{name}}
                                             </div>
                                         </div>
