--- a/public/css/project.css
+++ b/public/css/project.css
@@ -345,7 +345,7 @@ h3 {
 }
 
 .upload-container {
-    max-width: 550px;
+    max-width: 450px;
     width: 100%;
     padding: 30px;
     background: #fff;
@@ -354,7 +354,7 @@ h3 {
 }
 
 .drag-area {
-    height: 300px;
+    height: 220px;
     border: 3px dashed #e0eafc;
     display: flex;
     align-items: center;
@@ -457,4 +457,17 @@ button.remove {
     overflow: hidden; /* Ensures any overflow text is hidden */
     text-overflow: ellipsis; /* Adds ellipsis (...) for overflowed text */
     white-space: nowrap; /* Prevents text from wrapping to the next line */
+}
+
+.modal-body {
+    border-bottom: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column; /* Ensure the flex direction is column to stack items vertically */
+    justify-content: center;
+    align-items: center;
+}
+
+.password-container {
+    width: 100%;
 }
