--- a/src/views/homepage.hbs
+++ b/src/views/homepage.hbs
@@ -306,7 +306,7 @@
                                         <div>
                                             <div class="color-deep-violet fw-medium fs-6 mb-1">Type</div>
                                             <select class="form-select form-select-sm"
-                                                aria-label=".dropdown-for-project-name">
+                                                aria-label=".dropdown-for-file-type">
                                                 <option selected></option>
                                                 <option value="1">PDF</option>
                                                 <option value="2">DOCX</option>
@@ -319,7 +319,7 @@
                                         <div>
                                             <div class="color-deep-violet fw-medium fs-6 mb-1">Public</div>
                                             <select class="form-select form-select-sm"
-                                                aria-label=".dropdown-for-project-name">
+                                                aria-label=".dropdown-for-public-file">
                                                 <option selected></option>
                                                 <option value="1">Yes</option>
                                                 <option value="2">No</option>
@@ -443,7 +443,8 @@
                                         <div class="col text-center d-none d-sm-block">
                                             <div class="fw-medium fs-5 color-deep-violet">
                                                 <i class="bi bi-share color-blue fs-5 pe-2" style="cursor: pointer;"
-                                                    data-cid="{{CID}}" data-bs-toggle="modal" data-bs-target="#modal-share-file"></i>
+                                                    data-cid="{{CID}}" data-bs-toggle="modal"
+                                                    data-bs-target="#modal-share-file"></i>
 
                                                 <i class="bi bi-trash3 color-red fs-5" data-file-name="{{name}}"
                                                     data-bs-toggle="modal" data-bs-target="#modal-delete-file"
@@ -465,7 +466,8 @@
 
                                 <!-- Download -->
                                 <div class="col-3 col-sm-2 p-2 d-flex align-items-center" style="height: 100%;">
-                                    <div class="download hover-to-bg-light-violet clickable" data-cid="{{CID}}" data-file-name="{{name}}">
+                                    <div class="download hover-to-bg-light-violet clickable" data-cid="{{CID}}"
+                                        data-file-name="{{name}}">
                                         <i class="bi bi-cloud-download color-blue d-none d-md-block"
                                             style="font-size: 18pt;"></i>
                                         <span class="color-blue fs-6 fw-medium ps-2 text-center">Download</span>
@@ -522,7 +524,33 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row mt-3">
+                        <div class="col-8">
+                            <div class="mb-1 password-container p-0">
+                                <div class="color-deep-violet fw-bold fs-6 mb-1">File Password</div>
+                                <div class="position-relative">
+                                    <input type="password" class="form-control" id="passwordInput"
+                                        aria-describedby="passwordDescription" placeholder="Enter Your Password">
+                                    <i class="fas fa-eye position-absolute" id="togglePassword"
+                                        style="right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;"></i>
+                                </div>
+                                <div id="passwordDescription" class="form-text fw-normal">Password will not be sent to server.</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div>
+                                <div class="color-deep-violet fw-bold fs-6 mb-1">Make Public</div>
+                                <select class="form-select form-select-sm" aria-label=".dropdown-for-public-sharing" id="publicSharingSelect">
+                                    <option selected value="No">No</option>
+                                    <option value="Yes">Yes</option>
+                                </select>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
+
                 <div class="modal-footer" style="border-top: none;">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Close
@@ -576,7 +604,7 @@
                         <div class="col">
                             <p class="color-black fw-medium mb-1">Share this link with anyone you want to grant access
                                 to your file.</p>
-                            <p class="color-black fw-medium mt-0" >Anyone with this link can view your file by opening it
+                            <p class="color-black fw-medium mt-0">Anyone with this link can view your file by opening it
                                 in their browser.</p>
                         </div>
                     </div>
@@ -596,6 +624,35 @@
         </div>
     </div>
 
+    <div class="modal fade" id="modal-enter-password" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content align-items-center fw-bold color-deep-violet primary-background"
+                style="padding: 0 6%;">
+                <div class="modal-header" style="border-bottom: none;">
+                    <p class="modal-title fs-3" id="modalTitleId">
+                        Enter Password
+                    </p>
+                </div>
+                <div class="modal-body" style="border-bottom: none; width: 100%;">
+                    <div class="color-deep-violet fw-bold fs-6 mb-1">File Password</div>
+                        <div class="position-relative">
+                            <input type="password" class="form-control" id="decryptPasswordInput"
+                                         placeholder="Enter Your Password">
+                            <i class="fas fa-eye position-absolute" id="toggleDecryptPassword"
+                                        style="right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;"></i>
+                        </div>
+                </div>
+                <div class="modal-footer" style="border-top: none;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Cancel
+                    </button>
+                    <button type="button" class="btn btn-primary" id="enterPassBtn">Get File</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
@@ -605,6 +662,7 @@
     <script src="/js/deleteFile.js"></script>
     <script src="/js/shareLink.js"></script>
     <script src="/js/downloadFile.js"></script>
+    <script src="/js/encryptFile.js"></script>
 
     <script>
         function reActivateTooltip() {
