--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -24,7 +24,7 @@
             <div class="row header align-items-center justify-content-between flex-row"
                 style="min-height: 60px; padding: 0; width: 100%;">
                 <div class="col-auto">
-                    <a href="#home">
+                    <a href="/home">
                         <img class="logo" src="/img/logo.png" alt="logo"
                             style="height: 40px; width: 40px; margin-left: 40px;" />
                     </a>
@@ -54,63 +54,33 @@
             </div>
             <div class="main flex-grow-1" style="display: flex; flex-direction: row; width: 100%;">
                 <div class="sidebar d-flex flex-column justify-content-evenly" style="width: 120px;">
-                    <a class="active" href="#home">
+                    <a {{#if (eq title "Home")}} class="active" {{/if}} href="/home">
                         <div class="sidebar-element">
                             <div class="icon">
-                                <i class="bi bi-house-heart"></i>
+                                <i class="bi bi-house-fill"></i>
                             </div>
                             <div class="text">
-                                <span>Home</span>
+                                <span>My Files</span>
                             </div>
                         </div>
                     </a>
-                    <a href="#home">
+                    <a {{#if (eq title "Public Files")}} class="active" {{/if}} href="/public">
                         <div class="sidebar-element">
                             <div class="icon">
                                 <i class="bi bi-kanban"></i>
                             </div>
                             <div class="text">
-                                <span>Projects</span>
+                                <span>Public Files</span>
                             </div>
                         </div>
                     </a>
-                    <a href="#home">
+                    <a {{#if (eq title "Request Files")}} class="active" {{/if}} href="/requestFile" style="margin-bottom: 420px;">
                         <div class="sidebar-element">
                             <div class="icon">
-                                <i class="bi bi-person-bounding-box"></i>
+                                <i class="bi bi-box-seam-fill"></i>
                             </div>
                             <div class="text">
-                                <span>Administrator</span>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#home">
-                        <div class="sidebar-element">
-                            <div class="icon">
-                                <i class="bi bi-rocket-takeoff"></i>
-                            </div>
-                            <div class="text">
-                                <span>Performance</span>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#home">
-                        <div class="sidebar-element">
-                            <div class="icon">
-                                <i class="bi bi-clipboard2"></i>
-                            </div>
-                            <div class="text">
-                                <span>Task</span>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#home">
-                        <div class="sidebar-element">
-                            <div class="icon">
-                                <i class="bi bi-box-seam"></i>
-                            </div>
-                            <div class="text">
-                                <span>Productivity</span>
+                                <span>Request Files</span>
                             </div>
                         </div>
                     </a>
