client generate random to challenge real server

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -572,5 +572,5 @@
 <script src="/js/shareLink.js"></script>
 <script src="/js/downloadFile.js"></script>
 <script src="/js/encryptFile.js"></script>
-<script src="/js/homeFIlterFile.js"></script>
+<script src="/js/homeFilterFile.js"></script> 
 {{/block}}
