--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -106,8 +106,10 @@
                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/jsencrypt@3.3.2/bin/jsencrypt.min.js"></script> 
                 <script src="/js/showToast.js"></script>
-
+                <script src="/js/rsaVerify.js"></script>
                 {{{content "script"}}}
             </div>
         </div>
