fetch mimeType from json file in config

--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -110,6 +110,7 @@
                 <script src="https://cdn.jsdelivr.net/npm/jsencrypt@3.3.2/bin/jsencrypt.min.js"></script> 
                 <script src="/js/showToast.js"></script>
                 <script src="/js/rsaVerify.js"></script>
+                <script src="/js/convertType.js"></script>
                 {{{content "script"}}}
             </div>
         </div>
