alert error while login && register

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -47,7 +47,7 @@
                         <label for="input-password" class="form-label">Password</label>
                         <span class="form-text" style="color: #1570EF; cursor: pointer;">Forgot?</span>
                     </div>
-                    <input type="password" class="form-control" id="input-password" name="password" placeholder="Enter your password" required>
+                    <input type="password" class="form-control mb-3" id="input-password" name="password" placeholder="Enter your password" required>
                     <div id="issue-assign-error-1" class="text-danger fs-6" style="display: none;">
                         <i class="bi bi-exclamation-circle"></i>
                         <span>Password must have at least 8 characters</span>
